--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,15 @@
+# Настройки сервера
 PORT=8080
+
+# Настройки базы данных
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=your_password
 DB_NAME=history_ege
-TELEGRAM_BOT_TOKEN=7185317833:AAFp_KYwPvlI6daIB-mV_2twlNWQdWhVxHg
+
+# Настройки Telegram бота
+TELEGRAM_BOT_TOKEN=your_bot_token
 
 # Настройки приложения
 APP_NAME=История ЕГЭ
@@ -12,5 +17,5 @@ APP_ENV=development
 APP_DEBUG=true
 
 # Настройки JWT
-JWT_SECRET=printProgblog182006mustafablin_kagami777
+JWT_SECRET=your_jwt_secret
 JWT_EXPIRATION=24h 
